# Voxel-Game

./: .gitignore  CMakeLists.txt  LICENSE.txt  Library.cmake  README.md
.github/workflows/: cmake-multi-platform.yml
App/: CMakeLists.txt
App/Source/: App.cpp  App.h  Game.cpp
App/Source/Graphics/World/: World.cpp  World.h
App/Source/Graphics/World/Camera/: Camera.cpp  Camera.h
App/Source/Graphics/World/Mesh/Block/: Block.cpp  Block.h
App/Source/Graphics/World/Mesh/Chunk/: Chunk.cpp  Chunk.h
Core/: CMakeLists.txt
Core/Source/: Core.cpp  Core.h
Core/Source/Graphics/: Graphics.cpp  Graphics.h  OpenGL.cpp  OpenGL.h
Core/Source/Graphics/Shader/: ElementBuffer.cpp  ElementBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Core/Source/Graphics/Texture/: Texture.cpp  Texture.h
Core/Source/Window/: Window.cpp  Window.h
Resource/Shader/: Block.frag  Block.vert
